Fix navigator preview text overflow

--- a/src/components/navigator/styles/Item.css
+++ b/src/components/navigator/styles/Item.css
@@ -5,13 +5,21 @@
   border-radius: 10px;
 }
 
+.navigator-item h4,
+.navigator-item p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 100%;
+  white-space: nowrap;
+}
+
 .navigator-item h4 {
   font-size: 20px;
 }
 
+
 .navigator-item p {
   font-size: 15px;
-  overflow: hidden;
 }
 
 .navigator-item.active {
